--- a/frontend.html
+++ b/frontend.html
@@ -5,17 +5,41 @@
   <title>Smart Task Analyzer — Frontend</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    body{font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial;margin:16px}
-    .container{max-width:900px;margin:0 auto}
-    textarea{width:100%;height:120px;font-family:monospace}
-    .task{border:1px solid #ddd;padding:8px;margin:6px 0;border-radius:6px}
-    .high{background:#ffecec;border-color:#ffb3b3}
-    .medium{background:#fff7e6}
-    .low{background:#ecffe8}
-    .muted{color:#666;font-size:13px}
-    .row{display:flex;gap:8px;flex-wrap:wrap}
-    .col{flex:1;min-width:200px}
-    button{padding:8px 12px}
+    :root{
+      --max-width:980px;
+      --muted:#6b7280;
+      --accent:#2563eb;
+      --bg:#f9fafb;
+      --card:#ffffff;
+    }
+    html,body{height:100%;margin:0}
+    body{
+      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+      background:linear-gradient(180deg,#fbfdff 0%, #f7fbff 100%);
+      color:#0f172a;padding:24px;display:flex;align-items:flex-start;justify-content:center;
+    }
+    .container{width:100%;max-width:var(--max-width);background:var(--card);border-radius:12px;padding:20px;box-shadow:0 6px 18px rgba(16,24,40,0.06)}
+    h2{margin:0 0 12px;font-size:1.25rem}
+    .muted{color:var(--muted);font-size:13px}
+    textarea{width:100%;height:120px;font-family:monospace;border:1px solid #e6eef8;padding:10px;border-radius:8px;background:#fbfdff}
+    input,select,textarea{border:1px solid #e6eef8;padding:10px;border-radius:8px;background:#fff}
+    .task{border:1px solid #e6eef8;padding:12px;margin:10px 0;border-radius:10px;background:var(--card);display:block}
+    .priority-pill{display:inline-block;padding:4px 8px;border-radius:999px;font-size:12px;font-weight:600}
+    .high{border-left:6px solid #ef4444;background:#fff6f6}
+    .medium{border-left:6px solid #f59e0b;background:#fffaf5}
+    .low{border-left:6px solid #10b981;background:#f6fffa}
+    .row{display:flex;gap:12px;flex-wrap:wrap}
+    .col{flex:1;min-width:220px}
+    .controls{display:flex;gap:8px;align-items:center}
+    button{background:var(--accent);color:#fff;border:none;padding:9px 12px;border-radius:8px;cursor:pointer}
+    button.secondary{background:#eef2ff;color:var(--accent)}
+    .small{font-size:13px;color:var(--muted)}
+    pre{background:#0b1220;color:#e6eef8;padding:12px;border-radius:8px;overflow:auto}
+    .inputs label{display:block;font-size:13px;margin-bottom:6px}
+    @media (max-width:820px){
+      .row{flex-direction:column}
+      .controls{flex-wrap:wrap}
+    }
   </style>
 </head>
 <body>
@@ -117,6 +141,14 @@
       dependencies: document.getElementById('dependencies').value ? document.getElementById('dependencies').value.split(',').map(s=>s.trim()).filter(Boolean) : []
     };
     if (!t.title) { alert('Title required'); return; }
+    // Prevent adding tasks with past dates
+    if (t.due_date) {
+      const today = new Date().toISOString().slice(0,10);
+      if (t.due_date < today) {
+        alert('Due date cannot be in the past.');
+        return;
+      }
+    }
     localTasks.push(t);
     renderTasks(localTasks);
     e.target.reset();
